--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,21 @@
     android:background="@drawable/background_main"
     tools:context=".MainActivity">
 
+    <ImageView
+        android:id="@+id/logo2"
+        android:layout_width="70dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="6dp"
+        android:layout_marginLeft="6dp"
+        android:layout_marginTop="2dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.507"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/signup"
+        app:srcCompat="@drawable/jeniuscocreate_white" />
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -144,11 +159,11 @@
 
     <ImageView
         android:id="@+id/logo"
-        android:layout_width="150dp"
-        android:layout_height="153dp"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="45dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -195,7 +210,7 @@
         android:id="@+id/signin"
         android:layout_width="match_parent"
         android:layout_height="75dp"
-        android:layout_marginBottom="56dp"
+        android:layout_marginBottom="85dp"
         android:background="#3394ff"
         android:text="Sign In"
         android:textColor="#fff"
@@ -210,7 +225,7 @@
         android:layout_marginLeft="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginBottom="18dp"
+        android:layout_marginBottom="48dp"
         android:text="Don't have an account? Sign Up"
         android:textColor="#bfbfbf"
         android:textColorLink="#fff"
