--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -184,7 +184,7 @@
         android:id="@+id/join"
         android:layout_width="match_parent"
         android:layout_height="75dp"
-        android:layout_marginBottom="56dp"
+        android:layout_marginBottom="85dp"
         android:background="#3394ff"
         android:text="Join"
         android:textColor="#fff"
@@ -199,12 +199,23 @@
         android:layout_marginLeft="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginBottom="18dp"
+        android:layout_marginBottom="48dp"
         android:text="Already have an account? Sign In"
         android:textColor="#bfbfbf"
         android:textColorLink="#fff"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="70dp"
+        android:layout_height="30dp"
+        android:layout_marginTop="2dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/signin2"
+        app:srcCompat="@drawable/jeniuscocreate_white" />
 
 </android.support.constraint.ConstraintLayout>
