--- a/app/src/main/res/layout/activity_ewallet.xml
+++ b/app/src/main/res/layout/activity_ewallet.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Bayar">
+    tools:context=".Ewallet">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -49,7 +49,7 @@
                     android:layout_gravity="center"
                     android:paddingLeft="15dp"
                     android:textColor="#fff"
-                    android:text="Bayar"
+                    android:text="E-Wallet"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
                 <View
@@ -74,6 +74,6 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_bayar" />
+    <include layout="@layout/content_ewallet" />
 
 </android.support.design.widget.CoordinatorLayout>
