--- a/app/src/main/res/layout/app_bar_dashboard.xml
+++ b/app/src/main/res/layout/app_bar_dashboard.xml
@@ -9,48 +9,44 @@
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
+        android:theme="@style/AppTheme.AppBarOverlay"
+        android:layout_marginTop="20dp" >
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-<<<<<<< HEAD
+            android:background="#33b0ff"
             app:popupTheme="@style/AppTheme.PopupOverlay" >
 
-            <ImageView
-                android:id="@+id/toolbar_title"
-                android:layout_width="35dp"
-                android:layout_height="35dp"
-                android:adjustViewBounds="true"
-                android:scaleType="centerCrop"
-                android:visibility="visible"
-                android:src="@drawable/icon"/>
-            <TextView
-                android:id="@+id/toolbar_subtitle"
-                android:textSize="20sp"
-                android:layout_gravity="center"
-                android:paddingLeft="15dp"
-                android:textColor="#fff"
-                android:text="Overview"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:orientation="horizontal"
+                android:layout_height="wrap_content">
+
+                <ImageView
+                    android:id="@+id/toolbar_title"
+                    android:layout_width="35dp"
+                    android:layout_height="35dp"
+                    android:adjustViewBounds="true"
+                    android:scaleType="centerCrop"
+                    android:visibility="visible"
+                    android:src="@drawable/icon"/>
+                <TextView
+                    android:id="@+id/toolbar_subtitle"
+                    android:textSize="20sp"
+                    android:layout_gravity="center"
+                    android:paddingLeft="15dp"
+                    android:textColor="#fff"
+                    android:text="Overview"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+            </LinearLayout>
+
         </android.support.v7.widget.Toolbar>
-=======
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
->>>>>>> dabf8bd73c1b5bf95dcb24edb62542b00005a65f
 
     </android.support.design.widget.AppBarLayout>
 
     <include layout="@layout/content_dashboard" />
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@android:drawable/ic_dialog_email" />
 
 </android.support.design.widget.CoordinatorLayout>
