--- a/app/src/main/res/layout/activity_alokasi_dana.xml
+++ b/app/src/main/res/layout/activity_alokasi_dana.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Bayar">
+    tools:context=".AlokasiDana">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -49,31 +49,15 @@
                     android:layout_gravity="center"
                     android:paddingLeft="15dp"
                     android:textColor="#fff"
-                    android:text="Bayar"
+                    android:text="Alokasi Dana"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
-                <View
-                    android:layout_width="0dp"
-                    android:layout_height="0dp"
-                    android:layout_weight="1" />
-
-                <ImageView
-                    android:id="@+id/toolbar_jenius"
-                    android:layout_width="40dp"
-                    android:layout_height="35dp"
-                    android:layout_marginRight="30dp"
-                    android:adjustViewBounds="true"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/jenius_logowhite"
-                    android:visibility="visible"
-                    app:srcCompat="@drawable/jenius_logowhite" />
-
             </LinearLayout>
 
         </android.support.v7.widget.Toolbar>
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_bayar" />
+    <include layout="@layout/content_alokasi_dana" />
 
 </android.support.design.widget.CoordinatorLayout>
