--- a/app/src/main/res/layout/activity_transfer.xml
+++ b/app/src/main/res/layout/activity_transfer.xml
@@ -58,13 +58,13 @@
                     android:layout_weight="1" />
 
                 <ImageView
-                    android:id="@+id/toolbar_logo"
+                    android:id="@+id/toolbar_jenius"
                     android:layout_width="40dp"
                     android:layout_height="35dp"
                     android:layout_marginRight="30dp"
                     android:adjustViewBounds="true"
                     android:scaleType="centerCrop"
-                    android:src="@drawable/icon"
+                    android:src="@drawable/jenius_logowhite"
                     android:visibility="visible"
                     app:srcCompat="@drawable/jenius_logowhite" />
 
