--- a/app/src/main/res/layout/content_transfer.xml
+++ b/app/src/main/res/layout/content_transfer.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Transfer"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    tools:context=".Transfer"
     tools:showIn="@layout/activity_transfer">
 
     <TextView
@@ -35,6 +35,7 @@
     <Spinner
         android:id="@+id/spinner2"
         android:layout_width="match_parent"
+        android:layout_marginLeft="20dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
         app:layout_constraintTop_toBottomOf="@+id/norek"
@@ -84,7 +85,7 @@
         android:textColor="#ffffff"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
@@ -131,10 +132,13 @@
     <Spinner
         android:id="@+id/spinner"
         android:layout_width="match_parent"
+        android:layout_marginLeft="20dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView4"
-        tools:layout_editor_absoluteX="0dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
     <View
         android:id="@+id/line2"
