--- a/app/src/main/res/layout/content_ewallet.xml
+++ b/app/src/main/res/layout/content_ewallet.xml
@@ -36,6 +36,7 @@
     <Spinner
         android:id="@+id/spinner2"
         android:layout_width="match_parent"
+        android:layout_marginLeft="20dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
         app:layout_constraintTop_toBottomOf="@+id/norek"
@@ -117,6 +118,7 @@
     <Spinner
         android:id="@+id/spinner"
         android:layout_width="match_parent"
+        android:layout_marginLeft="20dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
         app:layout_constraintTop_toBottomOf="@+id/textView4"
