--- a/app/src/main/res/layout/content_about_us.xml
+++ b/app/src/main/res/layout/content_about_us.xml
@@ -45,10 +45,22 @@
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="450dp">
 
                 <TextView
                     android:id="@+id/textView2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginTop="150dp"
+                    android:layout_marginBottom="8dp"
+                    android:text="Now you can go back :D"
+                    app:layout_constraintBottom_toTopOf="@+id/tottabungan"
+                    app:layout_constraintStart_toStartOf="parent" />
+
+                <TextView
+                    android:id="@+id/textView7"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="20dp"
@@ -81,14 +93,6 @@
                     app:layout_constraintTop_toBottomOf="@+id/investasi"
                     tools:layout_editor_absoluteX="0dp" />
 
-                <Button
-                    android:id="@+id/button2"
-                    android:layout_width="match_parent"
-                    android:layout_height="61dp"
-                    android:layout_marginTop="300dp"
-                    android:background="@drawable/checkbox"
-                    android:textColor="#ffffff"
-                    tools:layout_editor_absoluteX="0dp" />
             </RelativeLayout>
 
         </LinearLayout>
